@startuml US_3.2.1_Domain_Model

!define AGGREGATE_ROOT_COLOR #FFDDAA
!define VALUE_OBJECT_COLOR #E8F5E9

class User <<Aggregate Root>> AGGREGATE_ROOT_COLOR {
    - UserId id
    - Email email
    - GoogleId googleId
    - UserRole role
    - UserStatus status
    - DateTime lastLogin
    + AuthenticateWithGoogle(googleToken)
    + Logout()
}

class UserId <<Value Object>> VALUE_OBJECT_COLOR {
    - Guid value
    + UserId(value)
}

class Email <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + Email(value)
}

class GoogleId <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + GoogleId(value)
}

class UserRole <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + UserRole(value)
}

class UserStatus <<Value Object>> VALUE_OBJECT_COLOR {
    - string value
    + UserStatus(value)
}

User "1" *-- "1" UserId : id
User "1" *-- "1" Email : email
User "1" *-- "1" GoogleId : googleId
User "1" *-- "1" UserRole : role
User "1" *-- "1" UserStatus : status

note right of User
  External IAM via Google OAuth2
  JWT tokens for session management
end note

@enduml
